inline tla code

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -158,3 +158,19 @@
   pages={551--555},
   year={2007}
 }
+
+@article{amazon_use_formal_methods,
+  title={Use of formal methods at Amazon Web Services},
+  author={Newcombe, Chris and Rath, Tim and Zhang, Fan and Munteanu, Bogdan and Brooker, Marc and Deardeuff, Michael},
+  journal={See http://research. microsoft. com/en-us/um/people/lamport/tla/formal-methods-amazon. pdf},
+  year={2014}
+}
+
+@book{lamport2002specifying,
+  title={Specifying systems: the TLA+ language and tools for hardware and software engineers},
+  author={Lamport, Leslie},
+  year={2002},
+  publisher={Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+
