Updates from Overleaf

--- a/tlatex.sty
+++ b/tlatex.sty
@@ -72,7 +72,7 @@
    \makebox[\symlength][l]{\textsc{ else}}}
 \newcommand{\EXCEPT}{\textsc{ except }}
 \newcommand{\EXTENDS}{\textsc{extends }}
-\newcommand{\FALSE}{\textsc{false}}
+\newcommand{\FALSE}{\textsc{FALSE}}
 \newcommand{\IF}{\textsc{if }}
 \newcommand{\IN}{\settowidth{\symlength}{\LET}%
    \makebox[\symlength][l]{\textsc{in}}}
@@ -87,7 +87,7 @@
 \newcommand{\LEMMA}{\textsc{lemma }}
 \newcommand{\PROPOSITION}{\textsc{proposition }}
 \newcommand{\COROLLARY}{\textsc{corollary }}
-\newcommand{\TRUE}{\textsc{true}}
+\newcommand{\TRUE}{\textsc{TRUE}}
 \newcommand{\VARIABLE}{\textsc{variable }}
 \newcommand{\VARIABLES}{\textsc{variables }}
 \newcommand{\WITH}{\textsc{ with }}
@@ -95,7 +95,7 @@
 \newcommand{\SF}{\textrm{SF}}
 \newcommand{\CHOOSE}{\textsc{choose }}
 \newcommand{\ENABLED}{\textsc{enabled }}
-\newcommand{\UNCHANGED}{\textsc{unchanged }}
+\newcommand{\UNCHANGED}{\textsc{UNCHANGED }}
 \newcommand{\SUBSET}{\textsc{subset }}
 \newcommand{\UNION}{\textsc{union }}
 \newcommand{\DOMAIN}{\textsc{domain }}
